*SVN*

* Added :use_short_month option to select_month helper to show month names as abbreviations

* Make link_to escape the javascript in the confirm option #1964 [nicolas.pouillard@gmail.com]

* Make assert_redirected_to properly check URL's passed as strings #1910 [Scott Barron]

* Make sure :layout => false is always used when rendering inside a layout

* Use raise instead of assert_not_nil in Test::Unit::TestCase#process to ensure that the test variables (controller, request, response) have been set

* Make sure assigns are built for every request when testing #1866

* Allow remote_addr to be queried on TestRequest #1668

* Fixed bug when a partial render was passing a local with the same name as the partial

* Improved performance of test app req/sec with ~10% refactoring the render method #1823 [Stefan Kaes]

* Improved performance of test app req/sec with 5-30% through a series of Action Pack optimizations #1811 [Stefan Kaes]

* Changed caching/expiration/hit to report using the DEBUG log level and errors to use the ERROR log level instead of both using INFO

* Added support for per-action session management #1763

* Improved rendering speed on complicated templates by up to 100% (the more complex the templates, the higher the speedup) #1234 [Stephan Kaes]. This did necessasitate a change to the internals of ActionView#render_template that now has four parameters. Developers of custom view handlers (like Amrita) need to update for that.

* Added options hash as third argument to FormHelper#input, so you can do input('person', 'zip', :size=>10) #1719 [jeremye@bsa.ca.gov]

* Added Base#expires_in(seconds)/Base#expires_now to control HTTP content cache headers #1755 [Thomas Fuchs]

* Fixed line number reporting for Builder template errors #1753 [piotr]

* Fixed assert_routing so that testing controllers in modules works as expected [Nicholas Seckar, Rick Olson]
